--- a/androidApp/app/src/main/res/layout/activity_main.xml
+++ b/androidApp/app/src/main/res/layout/activity_main.xml
@@ -97,4 +97,18 @@
         app:layout_constraintTop_toBottomOf="@+id/button"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Switch
+        android:id="@+id/isTizen3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="9dp"
+        android:text="Tizen 3 (2017) Compatability"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvIpTextField" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
