feat: video speed controls
These changes also includes @wikai's changes from https://github.com/reisxd/TizenTube/pull/22.

This also fixes issue #15.

Co-Authored-By: wikai <80284758+wikai@users.noreply.github.com>

--- a/mods/ui.css
+++ b/mods/ui.css
@@ -24,13 +24,18 @@
 }
 
 .ytaf-ui-container input[type='checkbox'] {
-  width: 2rem;
-  height: 1.5rem;
+  width: 1.4rem;
+  height: 1.4rem;
+}
+
+.ytaf-ui-container input[type='radio'] {
+  width: 1.4rem;
+  height: 1.4rem;
 }
 
 .ytaf-ui-container label {
   display: block;
-  font-size: 2rem;
+  font-size: 1.4rem;
 }
 
 .ytaf-notification-container {
