fix: fix transparency effects for video player

--- a/mods/ui.css
+++ b/mods/ui.css
@@ -65,3 +65,15 @@
   padding: 0 1em;
   line-height: 0;
 }
+
+/* Fixes transparency effect for the video player */
+
+.ytlr-watch-default__shadow {
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 90%) !important;
+  background-color: rgba(0, 0, 0, 0.3) !important;
+  display: block !important;
+  height: 100% !important;
+  pointer-events: none !important;
+  position: absolute !important;
+  width: 100% !important;
+}
