--- a/mods/ui.css
+++ b/mods/ui.css
@@ -68,7 +68,7 @@
 
 /* Fixes transparency effect for the video player */
 
-.ytlr-watch-default__shadow {
+.ytLrWatchDefaultShadow {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 90%) !important;
   background-color: rgba(0, 0, 0, 0.3) !important;
   display: block !important;
@@ -80,6 +80,6 @@
 
 /* Fixes shorts having a black background */
 
-.ytlr-tile-header-renderer--shorts {
+.ytLrTileHeaderRendererShorts {
   background-image: none !important;
 }
