feat: tizentube cobalt updating

--- a/mods/ui.css
+++ b/mods/ui.css
@@ -83,3 +83,9 @@
 .ytLrTileHeaderRendererShorts {
   background-image: none !important;
 }
+
+/* Multiline support for strings in the UI */
+
+.ytLrOverlayPanelHeaderRendererSubtitle {
+  white-space: pre-wrap !important;
+}
