--- a/mods/ui/ui.css
+++ b/mods/ui/ui.css
@@ -68,7 +68,8 @@
 
 /* Fixes transparency effect for the video player */
 
-.ytLrWatchDefaultShadow {
+.ytLrWatchDefaultShadow,
+div[idomkey="shadow"] {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0.8) 90%) !important;
   background-color: rgba(0, 0, 0, 0.3) !important;
   display: block !important;
