--- a/mods/ui/ui.css
+++ b/mods/ui/ui.css
@@ -105,3 +105,53 @@ div[idomkey="shadow"] {
 .ytLrProgressBarPlayed {
   z-index: 1 !important;
 }
+
+.ytLrSearchBarSearchVoice {
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    pointer-events: auto
+}
+
+.ytLrSearchVoiceHost {
+    font-size: 3rem;
+}
+
+.ytLrSearchVoiceMicButtonHost {
+    color: rgba(255, 255, 255, 0.7);
+}
+
+.ytLrSearchVoiceMicButtonHost {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    color: #f1f1f1;
+    display: block;
+    text-align: center;
+    width: 1em;
+    height: 1em;
+}
+
+.ytLrSearchVoiceMicButtonIcon {
+    display: inline-block;
+    font-size: .5em;
+    height: .5em;
+    width: .5em;
+    height: 1em;
+    width: 1em;
+    margin-top: .5em;
+    vertical-align: top !important;
+}
+
+.ytContribIconHost {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.ytContribIconTvArrowLeft::before {
+    content: "\e822";
+}
+
+.ytContribIconHost::before {
+    font-family: "YouTube Icons Outlined";
+}
